--- a/Homework3/index.html
+++ b/Homework3/index.html
@@ -10,10 +10,18 @@
     <header class="header">
       <nav class="navigation">
         <ul class="menu">
-          <li class="menu_item">Lifestyle</li>
-          <li class="menu_item">Photodiary</li>
-          <li class="menu_item">Music</li>
-          <li class="menu_item">Travel</li>
+          <li class="menu">
+            <a class="menu_item" href="#">Lifestyle</a> 
+          </li>
+          <li class="menu">
+            <a class="menu_item" href="#"> Photodiary</a>
+          </li>
+          <li class="menu">
+            <a class="menu_item" href="#">Music</a>
+          </li>
+          <li class="menu">
+            <a class="menu_item" href="#">Travel</a> 
+          </li>
         </ul>
       </nav>
     </header>
