--- a/Homework4/index.html
+++ b/Homework4/index.html
@@ -1,97 +1,143 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="./css/style.css">
-     <title>Homework4</title>
- </head>
- <body class="body">
-     <header class="main">
-         <a class="logo" href="">
-             <h1 class="mogo">MoGo</h1>
-         </a>
-        <nav class="nav">
-            <ul class="ul">
-                <li class="li">
-                    <a class="a" href="#">About</a>
-                </li>
-                <li class="li">
-                    <a class="a" href="#">Service</a>
-                </li>
-                <li class="li">
-                    <a class="a" href="#">Work</a>
-                </li>
-                <li class="li">
-                    <a class="a" href="#">Blog</a>
-                </li>
-                <li class="li">
-                    <a class="a" href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
-     </header>
-     <main class="menu">
-         <section class="section">
-             <h3 class="title">We work with</h3>
-             <h3 class="title2">Amazing services</h3>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Homework4</title>
+  </head>
+  <body class="body">
+    <header class="header">
+      <a class="logo" href="#">
+        <h1 class="mogo">MoGo</h1>
+      </a>
+      <nav class="menu">
+        <ul class="menu_list">
+          <li class="menu_list_item">
+            <a class="menu_item_list" href="#">About</a>
+          </li>
+          <li class="menu_list_item">
+            <a class="menu_item_list" href="#">Service</a>
+          </li>
+          <li class="menu_list_item">
+            <a class="menu_item_list" href="#">Work</a>
+          </li>
+          <li class="menu_list_item">
+            <a class="menu_item_list" href="#">Blog</a>
+          </li>
+          <li class="menu_list_item">
+            <a class="menu_item_list" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <section class="section1">
+        <h3 class="title">We work with</h3>
+        <h3 class="title2">Amazing services</h3>
 
-             <div class="div1">
-             <div class="services_icon">
-                 <img src="./icon/image1.png" alt="Error" class="icon">
-    
-                 <div class="div2">
-                 <h5 class="title3">Photography</h5>
-                 <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia nulla accusantium?</p>
-                 </div>
-             </div>
+        <div class="div1">
+          <div class="services_icon">
+            <img src="./icon_image/image1.png" alt="Error" class="icon" />
 
-             <div class="services_icon">
-                <img src="./icon/image6.png" alt="Error" class="icon">
-   
-                <div class="div2">
-                <h5 class="title3">web design</h5>
-                <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia nulla accusantium?</p>
-                </div>
+            <div class="div2">
+              <h5 class="title3">Photography</h5>
+              <p class="par">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia nulla accusantium?
+              </p>
             </div>
+          </div>
 
-            <div class="services_icon">
-                <img src="./icon/image3.png" alt="Error" class="icon">
-   
-                <div class="div2">
-                <h5 class="title3">Creativity</h5>
-                <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia nulla accusantium?</p>
-                </div>
-            </div>
+          <div class="services_icon">
+            <img src="./icon_image/image6.png" alt="Error" class="icon" />
 
-            <div class="services_icon">
-                <img src="./icon/image2.png" alt="Error" class="icon">
-   
-                <div class="div2">
-                <h5 class="title3">Seo</h5>
-                <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia nulla accusantium?</p>
-                </div>
+            <div class="div2">
+              <h5 class="title3">web design</h5>
+              <p class="par">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia nulla accusantium?
+              </p>
             </div>
+          </div>
 
-            <div class="services_icon">
-                <img src="./icon/image4.png" alt="Error" class="icon">
-   
-                <div class="div2">
-                <h5 class="title3">Css/html</h5>
-                <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia nulla accusantium?</p>
-                </div>
-            </div>
+          <div class="services_icon">
+            <img src="./icon_image/image3.png" alt="Error" class="icon" />
 
-            <div class="services_icon">
-                <img src="./icon/image5.png" alt="Error" class="icon">
-   
-                <div class="div2">
-                <h5 class="title3">Digital</h5>
-                <p class="par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia nulla accusantium?</p>
-                </div>
+            <div class="div2">
+              <h5 class="title3">Creativity</h5>
+              <p class="par">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia nulla accusantium?
+              </p>
             </div>
+          </div>
+
+          <div class="services_icon">
+            <img src="./icon_image/image2.png" alt="Error" class="icon" />
+
+            <div class="div2">
+              <h5 class="title3">Seo</h5>
+              <p class="par">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia nulla accusantium?
+              </p>
             </div>
-         </section>
-     </main>
- </body>
- </html>
+          </div>
+
+          <div class="services_icon">
+            <img src="./icon_image/image4.png" alt="Error" class="icon" />
+
+            <div class="div2">
+              <h5 class="title3">Css/html</h5>
+              <p class="par">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia nulla accusantium?
+              </p>
+            </div>
+          </div>
+
+          <div class="services_icon">
+            <img src="./icon_image/image5.png" alt="Error" class="icon" />
+
+            <div class="div2">
+              <h5 class="title3">Digital</h5>
+              <p class="par">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Perferendis quia nulla accusantium?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section2">
+        <h3 class="title_1">Who we are</h3>
+        <h3 class="title_2">Meet our team</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
+          molestias possimus quia. Eveniet in exercitationem deleniti quibusdam
+          mollitia! Perspiciatis provident id natus itaque iste, optio, sit
+          necessitatibus laudantium assumenda, ullam corporis eius rem?
+          Reiciendis cum fugiat, totam impedit laboriosam recusandae!
+        </p>
+        <div class="div_img">
+        <div class="services_image">
+            <img src="./icon_image/image7.png" alt="Error"  class="image">
+            <h4 class="title_3">Matthew Dix</h4>
+            <h5 class="title_4">Graphic Design</h5>
+        </div>
+        <div class="services_image">
+            <img src="./icon_image/image9.png" alt="Error"  class="image">
+            <h4 class="title_3">Christopher Cambell</h4>
+            <h5 class="title_4">Branding/UX design</h5>
+        </div>
+        <div class="services_image">
+            <img src="./icon_image/image8.png" alt="Error"  class="image">
+            <h4 class="title_3">Michael Fertig</h4>
+            <h5 class="title_4">Developer</h5>
+        </div>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
