--- a/Homework6/index.html
+++ b/Homework6/index.html
@@ -38,13 +38,17 @@
               <p class="services_text">Proin iaculis purus consequat sem cure. </p>
               <div class="services_cards">
                   <div class="services_card_list">
-                      <img src="./icon/Icon-Basket.png" alt="ERROR" class="services_img">
+                      <div class="services_img">
+                       <img src="./icon/Icon-Basket.png" alt="ERROR" class="services_card_img">
+                      </div>
+
                       <h5 class="services_card_title">E-Commerce</h5>
                       <p class="services_card_text">Proin iaculis purus consequat sem cure 
                         digni ssim. Donec porttitora entum suscipit 
                         aenean rhoncus posuere odio in tincidunt.</p>
                   </div>
                   <div>
+                      <div></div>
                       <img src="./icon/Icon-Laptop.png" alt="ERROR" class="services_img">
                       <h5  class="services_card_title">Responsive Web</h5>
                       <p class="services_card_text">Proin iaculis purus consequat sem cure 
