--- a/FinalProject/section6/index.html
+++ b/FinalProject/section6/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div class="contact__wrapper">
-    <section class="contact">
+    <section class="contact" id="contact">
       <h2 class="contact__title">Contact Us</h2>
       <div class="contact__without-title">
       <form action="#" method="POST" class="contact__form">
