--- a/Homework7/index.html
+++ b/Homework7/index.html
@@ -33,8 +33,8 @@
     <main class="main">
         <h3 class="main__title">Meet a partner for your best holiday</h3>
         <div class="all_four">
-       <div class="first_two">
-        <div class="cards">
+       <!-- <div class="first_two"> -->
+        <div class="cards first_card">
         <div class="main_div_img">
             <img class="img_layer" src="./images/Layer6.png" alt="ERROR">
             <div class="div_img">
@@ -45,7 +45,7 @@
         <p class="text_img img_text">Based in Chicago. I love playing tennis and loud music.</p>
         </div>
 
-        <div class="cards">
+        <div class="cards second_card">
             <div class="main_div_img">
                 <img class="img_layer" src="./images/Layer8.png" alt="ERROR">
                 <div class="div_img yellow">
@@ -56,9 +56,9 @@
             <p class="text_img">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
             </div>
 
-       </div>
-        <div class="second_two">
-            <div class="cards">
+       <!-- </div> -->
+        <!-- <div class="second_two"> -->
+            <div class="cards third_card">
                 <div class="main_div_img">
                     <img class="img_layer" src="./images/Layer7.png" alt="ERROR">
                     <div class="div_img green">
@@ -69,7 +69,7 @@
                 <p class="text_img">I'm a happy person that loves cats and climbing on mountains.</p>
                 </div>
 
-                <div class="cards">
+                <div class="cards quater_card">
                     <div class="main_div_img">
                         <img class="img_layer" src="./images/Layer10.png" alt="ERROR">
                         <div class="div_img blue">
@@ -79,7 +79,7 @@
                     <h5 class="title_img">Bradley Hunter</h5>
                     <p class="text_img">Based in Chicago. I love playing tennis and loud music.</p>
                     </div>
-        </div>
+        <!-- </div> -->
         </div>
                     <div class="partner">
                         <p class="partner_item">See other partners</p>
